test/classes/initializers/parentCall/inLoop.good
inLoop.chpl:4: In initializer:
inLoop.chpl:13: error: use of super.init() in a conditional stmt in phase 1
